--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -402,7 +402,7 @@ header .banner h2 {
     width: 100%;
     height: 100%;
     line-height: 2.5em;
-    opacity: 1;
+    opacity: 0.4;
     visibility: hidden;
     -webkit-transition: opacity .35s, visibility .35s, width .35s;
     transition: opacity .35s, visibility .35s, width .35s;
@@ -489,6 +489,7 @@ header .banner h2 {
 .overlay ul li a {
     display: block;
     position: relative;
+    line-height: 1.2em;
     color: #FFF;
     text-decoration: none;
     overflow: hidden;
