--- a/default.hbs
+++ b/default.hbs
@@ -11,7 +11,7 @@
     <meta name="description" content="{{meta_description}}">
 
     <link rel="stylesheet" href="{{asset "css/style.css"}}">
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:700,400">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:700,400">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700">
 
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{asset "apple-touch-icon-precomposed.png"}}">
