--- a/index.hbs
+++ b/index.hbs
@@ -32,7 +32,7 @@
                     <span class="year">{{date format="YYYY"}}</span>
                     </span>
                     <a href="{{url}}">
-                        <span class="gradient"></span>
+                        <div class="gradient"></div>
                         <h2>{{{title}}}</h2>
                         <p>{{excerpt words="30"}}...</p>
                     </a>
