--- a/index.hbs
+++ b/index.hbs
@@ -34,7 +34,7 @@
                     <a href="{{url}}">
                         <div class="gradient"></div>
                         <h2>{{{title}}}</h2>
-                        <div class="post-date">{{#if tags}}{{tags separator=", " prefix="Tagged in: "}}{{/if}}</div>
+                        <img src={{image}} />
                         <p>{{excerpt words="30"}}...</p>
                     </a>
                 </div>
