--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -618,7 +618,8 @@ header .banner h2 {
 }
 .index-wrapper section#timeline article div.inner img {
     width: 100%;
-    height: 200px;
+    height: 100%;
+    margin-top: 10px;
     z-index: 10;
     position: relative;
 }
