--- a/index.hbs
+++ b/index.hbs
@@ -54,7 +54,7 @@
                     </span>
                         <h2>{{{title}}}</h2>
                         <div class="post-date">{{#if tags}}{{tags separator=", " prefix="Tagged in: "}}{{/if}}</div>
-                        <p>{{content}}...</p>
+                        <p>{{content}}</p>
                 </div>
 
             </article>
