--- a/index.hbs
+++ b/index.hbs
@@ -32,7 +32,6 @@
                     <span class="year">{{date format="YYYY"}}</span>
                     </span>
                     <a href="{{url}}">
-                        <div class="gradient"></div>
                         <h2>{{{title}}}</h2>
                         <img src={{image}} />
                         <p>{{excerpt words="30"}}...</p>
@@ -46,7 +45,7 @@
             {{#unless featured}}
             <article>
 
-                <div class="inner">
+                <div class="inner notice">
                     <span class="date">
         <span class="day">{{date format="DD"}}</span>
                     <span class="month">{{date format="MMM"}}</span>
