--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -610,7 +610,7 @@ header .banner h2 {
     background: #fff;
     overflow: hidden;
 }
-index-wrapper section#timeline article div.inner .notice {
+.index-wrapper section#timeline article div.inner .notice {
     background: #FFDAB9;
 }
 .index-wrapper section#timeline article div.inner a {
