--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -727,7 +727,7 @@ header .banner h2 {
     margin: 0 15px 0 0;
 }
 .related {
-    width: 840px;
+    max-width: 840px;
     margin: 0 auto;
     padding: 40px 20px 40px 20px;
 }
