--- a/default.hbs
+++ b/default.hbs
@@ -27,6 +27,7 @@
     {{{body}}}
 
 
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-577b6807907511fa"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script>
         $('#toggle').click(function() {
