--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -664,6 +664,11 @@ header .banner h2 {
     color: #656565;
     border-radius: 0 0 2px 2px;
 }
+.index-wrapper section#timeline article div.inner img {
+    width: 100%;
+    height: auto;
+    margin-top: 10px;
+}
 .index-wrapper section#timeline article div.inner .post-date, 
 .index-wrapper section#timeline article div.inner h1,
 .index-wrapper section#timeline article div.inner h3,
