--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,17 +19,6 @@ body {
 ::selection {
     background: #D6EDFF;
 }
-.gradient {
-  height: 25px;
-  width: 100%;
-  background: #34a4ca;
-  background: -moz-linear-gradient(-90deg, #34a4ca 0%, #59d7dd 28%, #a8f2f0 59%, #d0f8ef 84%, #d6f6e1 100%);
-  background: -webkit-gradient(linear, left , right, color-stop(0%, #34a4ca), color-stop(28%, #59d7dd), color-stop(59%, #a8f2f0), color-stop(84%, #d0f8ef), color-stop(100%, #d6f6e1));
-  background: -webkit-linear-gradient(-90deg, #34a4ca 0%, #59d7dd 28%, #a8f2f0 59%, #d0f8ef 84%, #d6f6e1 100%);
-  background: -o-linear-gradient(-90deg, #34a4ca 0%, #59d7dd 28%, #a8f2f0 59%, #d0f8ef 84%, #d6f6e1 100%);
-  background: -ms-linear-gradient(-90deg, #34a4ca 0%, #59d7dd 28%, #a8f2f0 59%, #d0f8ef 84%, #d6f6e1 100%);
-  background: linear-gradient(-90deg, #34a4ca 0%, #59d7dd 28%, #a8f2f0 59%, #d0f8ef 84%, #d6f6e1 100%);
-}
 
 /* ============================================
                 TEXT FORMAT
@@ -346,6 +335,7 @@ header .banner h1 {
 }
 header .banner h1 a {
     text-decoration: none;
+    color: #2E2E36;
 }
 header .banner h2 {
     color: #3A4145;
