--- a/default.hbs
+++ b/default.hbs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="HandheldFriendly" content="True">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+    <meta name=viewport content="width=device-width, initial-scale=1">
 
     <title>{{meta_title}}</title>
     <meta name="description" content="{{meta_description}}">
