--- a/default.hbs
+++ b/default.hbs
@@ -154,6 +154,13 @@
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{asset "apple-touch-icon-precomposed.pn"}}">
     <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
     
+    <style>
+    .index-wrapper section#timeline article div.inner img {
+    max-width: 100%;
+    height: auto;
+    margin-top: 10px;
+}
+    </style>
     {{ghost_head}}
 
 </head>
