--- a/default.hbs
+++ b/default.hbs
@@ -160,6 +160,10 @@
     height: auto;
     margin-top: 10px;
 }
+        .post-wrapper img, .post-wrapper .cover-img {
+    width: 105%;
+    margin: -20px 0px 20px -20px;
+}
     </style>
     {{ghost_head}}
 
