--- a/default.hbs
+++ b/default.hbs
@@ -161,8 +161,8 @@
     margin-top: 10px;
 }
         .post-wrapper img, .post-wrapper .cover-img {
-    width: 100%;
-    
+    width: 105%;
+    margin: -20px 0px 20px -20px;
 }
     </style>
     {{ghost_head}}
