--- a/default.hbs
+++ b/default.hbs
@@ -175,7 +175,7 @@
     {{{body}}}
 
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="{{asset "js/jquery.min.js"}}"></script>
     <script>
         $('#toggle').click(function() {
             $(this).toggleClass('active');
