--- a/default.hbs
+++ b/default.hbs
@@ -175,7 +175,7 @@
     {{{body}}}
 
 
-    <script src="{{asset "js/jquery.min.js"}}"></script>
+    <script async src="{{asset "js/jquery.min.js"}}"></script>
     <script>
         $('#toggle').click(function() {
             $(this).toggleClass('active');
