add favicon and apple touch image

--- a/default.hbs
+++ b/default.hbs
@@ -151,8 +151,8 @@
 
     </script>
 
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{asset "apple-touch-icon-precomposed.pn"}}">
-    <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{asset "img/apple-touch-icon-precomposed.png"}}">
+    <link rel="shortcut icon" href="{{asset "img/favicon.ico"}}">
     
     {{ghost_head}}
 
