--- a/default.hbs
+++ b/default.hbs
@@ -152,7 +152,7 @@
     </script>
 
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{asset "img/apple-touch-icon-precomposed.png"}}">
-    <link rel="shortcut icon" href="{{asset "img/favicon.ico"}}">
+    <link rel="shortcut icon" href="{{asset "img/favicon.png"}}">
     
     {{ghost_head}}
 
