--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ body {
     font-size: 1.2rem;
     line-height: 1rem;
     color: #3A4145;
-    background: #eee;
+    background: #fcfbf7;
 }
 ::-moz-selection {
     background: #D6EDFF;
