--- a/error.hbs
+++ b/error.hbs
@@ -12,7 +12,7 @@
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
-    <link rel="shortcut icon" href="{{asset "images/favicon.ico"}}">
+    <link rel="shortcut icon" href="{{asset "img/favicon.png"}}">
     <meta http-equiv="cleartype" content="on">
 
     <link rel="stylesheet" type='text/css' href='//fonts.googleapis.com/css?family=Open+Sans:400,300,700'>
