--- a/index.hbs
+++ b/index.hbs
@@ -10,7 +10,7 @@
         {{navigation}}
     </div>
 
-    <section class="banner" role="banner" style="background-image: url('{{@blog.cover}}'); background-size:cover; background-repeat:no-repat;">
+    <section class="banner" role="banner">
         <h1><a href="{{@blog.url}}">{{@blog.title}}</a></h1>
         <h2>{{@blog.description}}</h2>
     </section>
