--- a/post.hbs
+++ b/post.hbs
@@ -10,7 +10,7 @@
         {{navigation}}
     </div>
   {{#post}} 
-   <section class="banner" role="banner" {{#if image}} style="background-image: url('{{image}}'); background-size:cover; background-repeat:no-repat;" {{/if}}>
+   <section class="banner" role="banner" {{#if image}} style="background-image: url('{{image}}');background-size:cover;background-repeat:no-repat;box-shadow: 0 1px 3px rgba(0,0,0,.12),0 1px 2px rgba(0,0,0,.24);" {{/if}}>
         <h1><a href="{{@blog.url}}">{{@blog.title}}</a></h1>
     </section>
 </header>
