--- a/post.hbs
+++ b/post.hbs
@@ -16,7 +16,7 @@
     </section>
     {{else}}
     <section class="banner" role="banner">
-        <h1><a href="{{@blog.url}}">{{title}}</a></h1>
+        <h1 style="margin-top:1em;"><a href="{{@blog.url}}">{{title}}</a></h1>
     </section>
     {{/if}}
     
