--- a/post.hbs
+++ b/post.hbs
@@ -12,7 +12,7 @@
   {{#post}} 
     {{#if image}}
    <section class="banner" role="banner" style="background-image: url('{{image}}');background-size:cover;background-color:#1abc9c;background-blend-mode:screen;box-shadow: 0 1px 3px rgba(0,0,0,.12),0 1px 2px rgba(0,0,0,.24);">
-        <h1 style="mix-blend-mode: multiply;"><a href="{{@blog.url}}">{{title}}</a></h1>
+        <a href="{{@blog.url}}"><img style="mix-blend-mode:exclusion" src="{{@blog.cover}}"></a>
     </section>
     {{else}}
     <section class="banner" role="banner">
