--- a/post.hbs
+++ b/post.hbs
@@ -12,11 +12,11 @@
   {{#post}} 
     {{#if image}}
    <section class="banner" role="banner" style="background-image: url('{{image}}');background-size:cover;background-color:#1abc9c;background-blend-mode:screen;box-shadow: 0 1px 3px rgba(0,0,0,.12),0 1px 2px rgba(0,0,0,.24);">
-        <a href="{{@blog.url}}"><img style="mix-blend-mode:exclusion" src="{{@blog.cover}}"></a>
+        <a href="{{@blog.url}}"><img style="mix-blend-mode:exclusion" src="{{@blog.logo}}"></a>
     </section>
     {{else}}
     <section class="banner" role="banner">
-        <a href="{{@blog.url}}"><img src="{{@blog.cover}}"></a>
+        <a href="{{@blog.url}}"><img src="{{@blog.logo}}"></a>
     </section>
     {{/if}}
     
