--- a/post.hbs
+++ b/post.hbs
@@ -11,8 +11,8 @@
     </div>
   {{#post}} 
     {{#if image}}
-   <section class="banner" role="banner" style="background-image: url('{{image}}');background-size:cover;background-color:#1abc9c;background-blend-mode:screen;box-shadow: 0 1px 3px rgba(0,0,0,.12),0 1px 2px rgba(0,0,0,.24);">
-        <a href="{{@blog.url}}"><img style="mix-blend-mode:exclusion" src="{{@blog.logo}}"></a>
+   <section class="banner" role="banner" style="background-image: url('{{image}}');background-size:cover;background-color:#1abc9c;background-blend-mode:screen;height:300px;box-shadow: 0 1px 3px rgba(0,0,0,.12),0 1px 2px rgba(0,0,0,.24);">
+        <a href="{{@blog.url}}"><img style="opacity:0.5; margin-top: 80px" src="{{@blog.logo}}"></a>
     </section>
     {{else}}
     <section class="banner" role="banner">
