--- a/post.hbs
+++ b/post.hbs
@@ -9,20 +9,15 @@
     <div class="overlay" id="overlay">
         {{navigation}}
     </div>
-  {{#post}} 
-    {{#if image}}
-   <section class="banner" role="banner" style="background-image: url('{{image}}');background-size:cover;padding:70px 40px;max-width:850px;height:300px;box-shadow: 0 1px 3px rgba(0,0,0,.12),0 1px 2px rgba(0,0,0,.24);">
-        <a href="{{@blog.url}}"><img style="opacity:0.5; margin-top: 80px" src="{{@blog.logo}}"></a>
-    </section>
-    {{else}}
+
     <section class="banner" role="banner">
-        <a href="{{@blog.url}}"><img src="{{@blog.logo}}"></a>
+        <h1><a href="{{@blog.url}}">{{@blog.title}}</a></h1>
     </section>
-    {{/if}}
-    
 </header>
 
     <div class="post-wrapper">
+        {{#post}} 
+        {{#if image}}<img class="cover-img" src="{{image}}">{{/if}}
         <h1>{{title}}</h1>
         <div class="post-date">{{date format="MMMM DD, YYYY"}}{{#if tags}} // {{tags separator=", " prefix="Tagged in: "}}{{/if}}</div>
 
