--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -500,7 +500,9 @@
      transform: translateY(-50%);
      font-size: 50px;
      font-weight: 400;
-     z-index: 100
+     z-index: 100;
+     display:inline;
+     padding: 20px;
  }
  .overlay ul {
      list-style: none;
