--- a/default.hbs
+++ b/default.hbs
@@ -177,6 +177,16 @@
         });
 
     </script>
+    <script>
+    (function() {  // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        
+        s.src = '//tilligettherecom.disqus.com/embed.js';
+        
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+    })();
+    </script>
 
 </body>
 
