--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -1,7 +1,1 @@
-<nav class="overlay-menu">
-    <ul>
-        {{#foreach navigation}}
-        <li><a href="{{url absolute="true"}}">{{label}}</a></li>
-        {{/foreach}}
-    </ul>
-</nav>
+<nav class="overlay-menu"> <ul> {{#foreach navigation}} <li><a href="{{url absolute="true"}}">{{label}}</a></li> {{/foreach}} </ul></nav>
