--- a/post.hbs
+++ b/post.hbs
@@ -25,8 +25,8 @@
         
         <hr />
         
+        <button class="show-comments">Load Disqus comments</button>
         <div id="disqus_thread"></div>
-        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
     </div>
     <div class="related">
         <h3>Related Posts</h3>
