--- a/default.hbs
+++ b/default.hbs
@@ -178,18 +178,14 @@
 
     </script>
     <script>
-        $(document).ready(function() {
-        $('.show-comments').on('click', function(){
-          var disqus_shortname = 'tilligetthere';
-          $.ajax({
-                  type: "GET",
-                  url: "http://" + tilligetthere.com + ".disqus.com/embed.js",
-                  dataType: "script",
-                  cache: true
-          });
-          $(this).fadeOut();
-        });
-        });
+    (function() {  // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        
+        s.src = '//tilligettherecom.disqus.com/embed.js';
+        
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+    })();
     </script>
 
 </body>
