--- a/index.hbs
+++ b/index.hbs
@@ -32,7 +32,7 @@
                     </span>
                     <a href="{{url}}">
                         {{#if image}}
-                        <img src={{image}} />
+                        <img src="{{image}}" />
                         {{/if}}    
                         <h2>{{{title}}}</h2>
                         <p>{{excerpt words="30"}}...</p>
