load dynamic try

--- a/index.hbs
+++ b/index.hbs
@@ -42,7 +42,9 @@
             </article>
             {{/foreach}}
         </section>
-        {{#if pagination}}
-            {{> pagination}}
-        {{/if}}
+        
+        <div style="width:100%;text-align:center">
+    <button id="load-posts">Load more posts</button>
+</div>
+        
     </div>
