--- a/default.hbs
+++ b/default.hbs
@@ -247,7 +247,7 @@
             </article>'
 
         //Append the html to the content of the blog
-        $('.content').append(postInfo);
+        $('.blog-content').append(postInfo);
         //incriment next page so it will get the next page of posts if hit again.
         nextPage += 1;
     }
