--- a/partials/pagination.hbs
+++ b/partials/pagination.hbs
@@ -1,9 +1,9 @@
 <nav class="pagination" role="pagination">
     {{#if next}}
-    <a class="newer-posts" href="{{pageUrl next}}">&#8249;</a> 
+    <a class="newer-posts" href="{{page_url next}}">&#8249;</a> 
     {{/if}}
     <span class="page-number">Page {{page}} of {{pages}}</span> 
     {{#if prev}}
-    <a class="older-posts" href="{{pageUrl prev}}">&#8250;</a> 
+    <a class="older-posts" href="{{page_url prev}}">&#8250;</a> 
     {{/if}}
 </nav>
