--- a/default.hbs
+++ b/default.hbs
@@ -171,6 +171,10 @@
     
     <script src="{{asset "js/jquery.min.js"}}"></script>
     <script>
+    var max_pages = parseInt('{{pagination.pages}}');
+    </script>
+    <script type="text/javascript" src="{{asset "js/infinitescroll.js"}}"></script
+    <script>
         $('#toggle').click(function() {
             $(this).toggleClass('active');
             $('#overlay').toggleClass('open');
