--- a/default.hbs
+++ b/default.hbs
@@ -173,7 +173,7 @@
     <script>
     var max_pages = parseInt('{{pagination.pages}}');
     </script>
-    <script type="text/javascript" src="{{asset "js/infinitescroll.js"}}"></script
+    <script type="text/javascript" src="{{asset "js/infinitescroll.js"}}"></script>
     <script>
         $('#toggle').click(function() {
             $(this).toggleClass('active');
