--- a/default.hbs
+++ b/default.hbs
@@ -24,7 +24,7 @@
 
 </head>
 
-<body style="background: url('{{@blog.cover'}};background-size:cover;)">
+<body style="background: url('{{@blog.cover}}');background-size:cover;">
 
 
     {{{body}}}
