--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@
      font-size: 1.2rem;
      line-height: 1rem;
      color: #3A4145;
-     background: #3A4145;
+     background: #fff;
  }
  ::-moz-selection {
      background: #D6EDFF
