--- a/post.hbs
+++ b/post.hbs
@@ -1,5 +1,5 @@
 {{!< default}} 
-<header style="background: url('{{@blog.cover}}');background-size:cover;background-attachment:fixed;">
+<header>
     <div class="button_container" id="toggle">
         <span class="top"></span>
         <span class="middle"></span>
