--- a/default.hbs
+++ b/default.hbs
@@ -23,7 +23,7 @@
     {{ghost_head}}
 
 </head>
-<body>
+<body style="background:url('@blog.cover');background-size:cover;background-attachment:fixed;">
     
     {{{body}}}
 
